--- a/bookScrape.ipynb
+++ b/bookScrape.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
     "titles = []\n",
     "urlss = []\n",
     "\n",
-    "pages_to_scrape=10    #number of pages to be scraped\n",
+    "pages_to_scrape= 2    #number of pages to be scraped\n",
     "for i in range(1, pages_to_scrape+1):  #creates a range\n",
     "    url = ('http://books.toscrape.com/catalogue/page-{}.html'.format(i))\n",
     "    pages.append(url)\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,21 +54,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.DataFrame(data=data)\n",
-    "df.index+=1\n"
+    "df.index+=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_excel(\"C:/Users/14078/PycharmProjects/Data_Mining/output.xlsx\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-38-916d57522bdd>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-38-916d57522bdd>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    is.alpha('\\n $6,950\\n \\n\\nNO FEE\\n\\n\\n')\u001b[0m\n\u001b[1;37m     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "is.('\\n $6,950\\n \\n\\nNO FEE\\n\\n\\n')"
    ]
   },
   {
