--- a/Cluster_Analysis/UAP_DATAMINE.ipynb
+++ b/Cluster_Analysis/UAP_DATAMINE.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        "108655 2017-12-20  Ivan Castro 2019-07-15   138 days  2019Q3"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
