--- a/dataVisual/Refactored_Py_DS_ML_Bootcamp-master/13-Logistic-Regression/02-Logistic Regression Project.ipynb
+++ b/dataVisual/Refactored_Py_DS_ML_Bootcamp-master/13-Logistic-Regression/02-Logistic Regression Project.ipynb
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -240,23 +240,36 @@
       "Timestamp                   1000 non-null object\n",
       "Clicked on Ad               1000 non-null int64\n",
       "dtypes: float64(3), int64(3), object(4)\n",
-      "memory usage: 78.2+ KB\n"
+      "memory usage: 62.5+ KB\n"
      ]
     }
    ],
    "source": [
-    "ad"
+    "ad_data.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -368,12 +381,14 @@
        "max              269.960000     1.000000        1.00000  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "ad_data.describe()"
+   ]
   },
   {
    "cell_type": "markdown",
