--- a/dataVisual/Refactored_Py_DS_ML_Bootcamp-master/15-Decision-Trees-and-Random-Forests/02-Decision Trees and Random Forest Project.ipynb
+++ b/dataVisual/Refactored_Py_DS_ML_Bootcamp-master/15-Decision-Trees-and-Random-Forests/02-Decision Trees and Random Forest Project.ipynb
@@ -1120,25 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1146,17 +1128,37 @@
       "text/plain": [
        "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
        "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
        "            min_samples_leaf=1, min_samples_split=2,\n",
-       "            min_weight_fraction_leaf=0.0, n_estimators=600, n_jobs=1,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=300, n_jobs=None,\n",
        "            oob_score=False, random_state=None, verbose=0,\n",
        "            warm_start=False)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "rfc  = RandomForestClassifier(n_estimators= 300)\n",
+    "rfc.fit(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -1172,10 +1174,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rfc_pred = rfc.predict(X_test)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1186,33 +1190,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             precision    recall  f1-score   support\n",
+      "[[2424    7]\n",
+      " [ 434    9]]\n",
       "\n",
-      "          0       0.85      1.00      0.92      2431\n",
-      "          1       0.56      0.01      0.02       443\n",
       "\n",
-      "avg / total       0.80      0.85      0.78      2874\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.85      1.00      0.92      2431\n",
+      "           1       0.56      0.02      0.04       443\n",
+      "\n",
+      "   micro avg       0.85      0.85      0.85      2874\n",
+      "   macro avg       0.71      0.51      0.48      2874\n",
+      "weighted avg       0.80      0.85      0.78      2874\n",
       "\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(confusion_matrix(y_test, rfc_pred))\n",
+    "print('\\n')\n",
+    "print(classification_report(y_test,rfc_pred))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1223,18 +1235,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[2427    4]\n",
-      " [ 438    5]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -1247,13 +1250,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 36,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "Random Forest"
+   ]
   },
   {
    "cell_type": "markdown",
